src/objects/Case_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArrestDate__c</fullName>
        <formula>text(Docket__r.Arrest_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ArrestDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boro_Court__c</fullName>
        <formula>if (text(Docket__r.Borough__c)=&apos;Bronx&apos;,&apos;X&apos;,left(text(Docket__r.Borough__c),1)) + &apos;-&apos;+
left(Docket__r.RecordType.Name,1) + &apos;C&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boro Court</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseBoro__c</fullName>
        <formula>text(Docket__r.Borough__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseBoro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Court_Status_Calc__c</fullName>
        <description>pull case court status value from cae information</description>
        <formula>Docket__r.Case_Court_Status__c</formula>
        <label>Case Court Status Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status_at_Exit__c</fullName>
        <description>Case status at time of exit from current program</description>
        <label>Case Status at Exit</label>
        <picklist>
            <picklistValues>
                <fullName>Sentenced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convicted, Adjourned for Sentencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-adjudication/Pending Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Contact__r.Name_and_P_C_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Relationships</relationshipLabel>
        <relationshipName>Case_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DelinquencyTrackingLKID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delinquency Tracking</label>
        <referenceTo>Delinquency_Tracking__c</referenceTo>
        <relationshipLabel>Case Relationships</relationshipLabel>
        <relationshipName>Case_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docket_Indictment__c</fullName>
        <formula>if(Docket__r.Indictment__c = &apos;&apos;,Docket__r.Name, Docket__r.Indictment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docket Indictment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket_Name__c</fullName>
        <formula>Docket__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docket Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket__c</fullName>
        <label>Docket</label>
        <referenceTo>Case_Information__c</referenceTo>
        <relationshipLabel>Case Relationships</relationshipLabel>
        <relationshipName>Contact_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indictment__c</fullName>
        <formula>Docket__r.Indictment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indictment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NYSID__c</fullName>
        <formula>Contact__r.NYSID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NYSID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Court_Date__c</fullName>
        <formula>HYPERLINK(&quot;/00U/e?what_id=&quot; &amp; Docket__c &amp; &quot;&amp;who_id=&quot; &amp; Contact__c &amp; &quot;&amp;RecordType=012600000004yjw&amp;retURL=%2F&quot; &amp;  Docket__c &amp; &quot;&amp;cancelURL=%2F&quot; &amp; Docket__c &amp; &quot;&amp;ent=Event&quot;, &quot;New Court Date&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Court Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCID__c</fullName>
        <formula>Contact__r.P_C_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>substitute(Contact__r.RecordType.Name, &quot; Client&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_to_Program__c</fullName>
        <formula>TEXT(DelinquencyTrackingLKID__r.Returned_to_Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returned to Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sentence_Coordinated_with_SRP__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <globalPicklist>YesNo</globalPicklist>
        <label>Sentence Coordinated with SRP</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervised_by_SRP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this docket assigned to SRP by court for supervision</description>
        <label>Supervised by SRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique id of the format Docket__c;Contact__c. Ensures that duplicate case relationships for the same contact/docket pair are not created.</description>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warrant_Issued__c</fullName>
        <formula>TEXT(DelinquencyTrackingLKID__r.Warrant_issued__c )</formula>
        <label>Warrant Issued</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastNameSoundex__c</fullName>
        <formula>Contact__r.Last_Name_Soundex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lastNameSoundex</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>programId__c</fullName>
        <formula>Contact__r.Most_Recent_Program_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>programId</label>
        <type>Text</type>
    </fields>
    <label>Case Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>ArrestDate__c</columns>
        <columns>Case_Court_Status_Calc__c</columns>
        <columns>Supervised_by_SRP__c</columns>
        <columns>Indictment__c</columns>
        <columns>Docket_Indictment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nopcid</fullName>
        <columns>Case_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>ArrestDate__c</columns>
        <columns>Case_Court_Status_Calc__c</columns>
        <columns>Supervised_by_SRP__c</columns>
        <columns>Indictment__c</columns>
        <columns>Docket_Indictment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCID__c</field>
            <operation>equals</operation>
        </filters>
        <label>nopcid</label>
    </listViews>
    <listViews>
        <fullName>program</fullName>
        <columns>Case_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>ArrestDate__c</columns>
        <columns>Case_Court_Status_Calc__c</columns>
        <columns>Supervised_by_SRP__c</columns>
        <columns>Indictment__c</columns>
        <columns>Docket_Indictment__c</columns>
        <columns>PCID__c</columns>
        <columns>Program__c</columns>
        <columns>programId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCID__c</field>
            <operation>startsWith</operation>
            <value>SRP</value>
        </filters>
        <label>program</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Case Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>